# jmrg

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs
tests/: integration.rs
tests/data/: 1.json  3.json.bz2
tests/data/output/: normal_run.json
