[package]
name = "jmrg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
opt-level = 3

[dependencies]
serde = "1.0.160"
serde_json = "1.0.91"
clap = { version = "4.2.1", features = ["derive"] }
flate2 = "1.0.25"
infer = "0.13.0"
bzip2 = "0.4.4"