[package]
name = "jmrg"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
opt-level = 3

[dependencies]
serde = "1.0.218"
serde_json = "1.0.140"
clap = { version = "4.5.31", features = ["derive"] }
flate2 = "1.1.0"
infer = "0.19.0"
bzip2 = "0.5.2"
chrono = {  version = "0.4.40", features = ["serde"]}

[dev-dependencies]
stringreader = "0.1.1"
assert_cmd = "2.0.16"
predicates = "3.1.3"